// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserPassword expectTypeFailure(1): TYPE_FAILURE::UserPassword(1) 1`] = `
Struct {
  "errors": Array [
    Struct {
      "actual": 1,
      "expected": [Function],
      "message": "Wrong password type",
      "path": Array [],
    },
    Struct {
      "actual": 1,
      "expected": [Function],
      "message": "Wrong password type max length",
      "path": Array [],
    },
    Struct {
      "actual": 1,
      "expected": [Function],
      "message": "Wrong password type min length",
      "path": Array [],
    },
    Struct {
      "actual": 1,
      "expected": [Function],
      "message": "Wrong password format",
      "path": Array [],
    },
  ],
  "value": 1,
}
`;

exports[`UserPassword expectTypeFailure(Ot1*): TYPE_FAILURE::UserPassword(Ot1*) 1`] = `
Struct {
  "errors": Array [
    Struct {
      "actual": "Ot1*",
      "expected": [Function],
      "message": "Wrong password type min length",
      "path": Array [],
    },
    Struct {
      "actual": "Ot1*",
      "expected": [Function],
      "message": "Wrong password format",
      "path": Array [],
    },
  ],
  "value": "Ot1*",
}
`;

exports[`UserPassword expectTypeFailure(YuraYuraYuraYuraYuraYura): TYPE_FAILURE::UserPassword(YuraYuraYuraYuraYuraYura) 1`] = `
Struct {
  "errors": Array [
    Struct {
      "actual": "YuraYuraYuraYuraYuraYura",
      "expected": [Function],
      "message": "Wrong password type max length",
      "path": Array [],
    },
    Struct {
      "actual": "YuraYuraYuraYuraYuraYura",
      "expected": [Function],
      "message": "Wrong password format",
      "path": Array [],
    },
  ],
  "value": "YuraYuraYuraYuraYuraYura",
}
`;

exports[`UserPassword expectTypeFailure(onetwo123***): TYPE_FAILURE::UserPassword(onetwo123***) 1`] = `
Struct {
  "errors": Array [
    Struct {
      "actual": "onetwo123***",
      "expected": [Function],
      "message": "Wrong password format",
      "path": Array [],
    },
  ],
  "value": "onetwo123***",
}
`;
